// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows a className to be set 1`] = `
<div
  className="AdditionalClass Search"
>
  <div
    className="Search-header"
  >
    <h2
      className="Search-title"
    >
      <strong>
        0
      </strong>
       hotels in 
      <strong>
        Sydney
      </strong>
      .
    </h2>
    <div
      className="Search-sort"
    >
      Sort by 
      <select
        onChange={[Function]}
        value="sort_low"
      >
        <option
          value="sort_high"
        >
          Price high-low
        </option>
        <option
          value="sort_low"
        >
          Price low-high
        </option>
      </select>
    </div>
  </div>
  <div />
</div>
`;

exports[`passes other props through 1`] = `
<div
  aria-label="I should be on the div"
  className="Search"
>
  <div
    className="Search-header"
  >
    <h2
      className="Search-title"
    >
      <strong>
        0
      </strong>
       hotels in 
      <strong>
        Sydney
      </strong>
      .
    </h2>
    <div
      className="Search-sort"
    >
      Sort by 
      <select
        onChange={[Function]}
        value="sort_low"
      >
        <option
          value="sort_high"
        >
          Price high-low
        </option>
        <option
          value="sort_low"
        >
          Price low-high
        </option>
      </select>
    </div>
  </div>
  <div />
</div>
`;

exports[`renders no results when hotels is empty 1`] = `
<div
  className="Search"
>
  <div
    className="Search-header"
  >
    <h2
      className="Search-title"
    >
      <strong>
        0
      </strong>
       hotels in 
      <strong>
        Sydney
      </strong>
      .
    </h2>
    <div
      className="Search-sort"
    >
      Sort by 
      <select
        onChange={[Function]}
        value="sort_low"
      >
        <option
          value="sort_high"
        >
          Price high-low
        </option>
        <option
          value="sort_low"
        >
          Price low-high
        </option>
      </select>
    </div>
  </div>
  <div />
</div>
`;

exports[`renders results when hotels is not empty 1`] = `
<div
  className="Search"
>
  <div
    className="Search-header"
  >
    <h2
      className="Search-title"
    >
      <strong>
        2
      </strong>
       hotels in 
      <strong>
        Sydney
      </strong>
      .
    </h2>
    <div
      className="Search-sort"
    >
      Sort by 
      <select
        onChange={[Function]}
        value="sort_low"
      >
        <option
          value="sort_high"
        >
          Price high-low
        </option>
        <option
          value="sort_low"
        >
          Price low-high
        </option>
      </select>
    </div>
  </div>
  <div>
    <div
      className="Hotel"
    >
      <div
        className="Hotel-image"
      >
        <span
          className="Hotel-promotion"
        >
          Exclusive Deal
        </span>
        <img
          alt=""
          src="https://unsplash.it/145/125/?random1"
        />
      </div>
      <div
        className="Hotel-details"
      >
        <div
          className="Hotel-title"
        >
          <h3>
            Courtyard by Marriott Sydney-North Ryde
          </h3>
          <div
            aria-label="4 stars (self rated)"
            className="Hotel-rating Rating"
          >
            <div
              className={undefined}
              style={
                Object {
                  "overflow": "hidden",
                  "position": "relative",
                }
              }
            >
              <style
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "
                      .react-stars-00487723387081509:before {
                        position: absolute;
                        overflow: hidden;
                        display: block;
                        z-index: 1;
                        top: 0; left: 0;
                        width: 50%;
                        content: attr(data-forhalf);
                        color: #ffd700;
                    }",
                  }
                }
              />
              <span
                className=""
                data-forhalf="●"
                data-index={0}
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "color": "#ffd700",
                    "cursor": "default",
                    "display": "block",
                    "float": "left",
                    "fontSize": "30px",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                ●
              </span>
              <span
                className=""
                data-forhalf="●"
                data-index={1}
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "color": "#ffd700",
                    "cursor": "default",
                    "display": "block",
                    "float": "left",
                    "fontSize": "30px",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                ●
              </span>
              <span
                className=""
                data-forhalf="●"
                data-index={2}
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "color": "#ffd700",
                    "cursor": "default",
                    "display": "block",
                    "float": "left",
                    "fontSize": "30px",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                ●
              </span>
              <span
                className=""
                data-forhalf="●"
                data-index={3}
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "color": "#ffd700",
                    "cursor": "default",
                    "display": "block",
                    "float": "left",
                    "fontSize": "30px",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                ●
              </span>
              <span
                className=""
                data-forhalf="●"
                data-index={4}
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "color": "#ccc",
                    "cursor": "default",
                    "display": "block",
                    "float": "left",
                    "fontSize": "30px",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                ●
              </span>
            </div>
          </div>
        </div>
        <div
          className="Hotel-address"
        >
          7-11 Talavera Rd, North Ryde
        </div>
        <div
          className="Hotel-room"
        >
          Deluxe Balcony Room
        </div>
      </div>
      <div
        className="Hotel-cancellation"
      >
        Free cancellation
      </div>
      <div
        className="Hotel-price"
      >
        <div
          className="Hotel-priceDescription"
        >
          1 night total (AUD)
        </div>
        <div>
          <span
            className="Hotel-currencySymbol"
          >
            $
          </span>
           
          <span
            className="Hotel-priceNumber"
          >
            329
          </span>
        </div>
        <div
          className="Hotel-savings"
        >
          Save $
          30
          ~
        </div>
      </div>
    </div>
    <div
      className="Hotel"
    >
      <div
        className="Hotel-image"
      >
        <span
          className="Hotel-promotion"
        >
          Exclusive Deal
        </span>
        <img
          alt=""
          src="https://unsplash.it/145/125/?random2"
        />
      </div>
      <div
        className="Hotel-details"
      >
        <div
          className="Hotel-title"
        >
          <h3>
            Primus Hotel Sydney
          </h3>
          <div
            aria-label="5 stars (self rated)"
            className="Hotel-rating Rating"
          >
            <div
              className={undefined}
              style={
                Object {
                  "overflow": "hidden",
                  "position": "relative",
                }
              }
            >
              <style
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "
                      .react-stars-00487723387081509:before {
                        position: absolute;
                        overflow: hidden;
                        display: block;
                        z-index: 1;
                        top: 0; left: 0;
                        width: 50%;
                        content: attr(data-forhalf);
                        color: #ffd700;
                    }",
                  }
                }
              />
              <span
                className=""
                data-forhalf="●"
                data-index={0}
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "color": "#ffd700",
                    "cursor": "default",
                    "display": "block",
                    "float": "left",
                    "fontSize": "30px",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                ●
              </span>
              <span
                className=""
                data-forhalf="●"
                data-index={1}
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "color": "#ffd700",
                    "cursor": "default",
                    "display": "block",
                    "float": "left",
                    "fontSize": "30px",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                ●
              </span>
              <span
                className=""
                data-forhalf="●"
                data-index={2}
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "color": "#ffd700",
                    "cursor": "default",
                    "display": "block",
                    "float": "left",
                    "fontSize": "30px",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                ●
              </span>
              <span
                className=""
                data-forhalf="●"
                data-index={3}
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "color": "#ffd700",
                    "cursor": "default",
                    "display": "block",
                    "float": "left",
                    "fontSize": "30px",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                ●
              </span>
              <span
                className=""
                data-forhalf="●"
                data-index={4}
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseMove={[Function]}
                onMouseOver={[Function]}
                style={
                  Object {
                    "color": "#ffd700",
                    "cursor": "default",
                    "display": "block",
                    "float": "left",
                    "fontSize": "30px",
                    "overflow": "hidden",
                    "position": "relative",
                  }
                }
              >
                ●
              </span>
            </div>
          </div>
        </div>
        <div
          className="Hotel-address"
        >
          339 Pitt St, Sydney
        </div>
        <div
          className="Hotel-room"
        >
          Deluxe King
        </div>
      </div>
      <div
        className="Hotel-cancellation"
      >
        Free cancellation
      </div>
      <div
        className="Hotel-price"
      >
        <div
          className="Hotel-priceDescription"
        >
          1 night total (AUD)
        </div>
        <div>
          <span
            className="Hotel-currencySymbol"
          >
            $
          </span>
           
          <span
            className="Hotel-priceNumber"
          >
            375
          </span>
        </div>
        <div
          className="Hotel-savings"
        >
          Save $
          28
          ~
        </div>
      </div>
    </div>
  </div>
</div>
`;
